Unfuck version numbers and my email address

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = App-FindCallers
-author  = Tadeusz Sośnierz <tadeusz@com>
+author  = Tadeusz Sośnierz <tadeusz@sosnierz.com>
 license = MIT
 copyright_holder = Tadeusz Sośnierz
 copyright_year   = 2016
