--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,9 @@ license = MIT
 copyright_holder = Tadeusz Sośnierz
 copyright_year   = 2016
 
-version = 0.02
+version = 0.04
 
 [@Basic]
+
+[Prereqs]
+PPI = 0
